--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,21 @@ plugins {
     id 'net.minecraftforge.gradle' version '5.1.+'
 }
 
+
+publishing {
+    repositories {
+        maven {
+            name = "GitHubPackages"
+            url = uri("https://maven.pkg.github.com/AutomaticalEchoes/equipsuit")
+            credentials {
+                username = System.getenv("GITHUB_ACTOR")
+                password = System.getenv("GITHUB_TOKEN")
+            }
+        }
+    }
+}
+
+
 version = '1.0'
 group = 'com.automaticalechoes.simpleandunadorned' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'simpleandunadorned'
