--- a/build.gradle
+++ b/build.gradle
@@ -11,24 +11,23 @@ buildscript {
 plugins {
     id 'eclipse'
     id 'maven-publish'
-    id 'java-library'
     id 'net.minecraftforge.gradle' version '5.1.+'
 }
 
 
 
-publishing {
-    repositories {
-        maven {
-            name = "GitHubPackages"
-            url = uri("https://maven.pkg.github.com/AutomaticalEchoes/simpleandunadorned")
-            credentials {
-                username = System.getenv("GITHUB_ACTOR")
-                password = System.getenv("GITHUB_TOKEN")
-            }
-        }
-    }
-}
+//publishing {
+//    repositories {
+//        maven {
+//            name = "GitHubPackages"
+//            url = uri("https://maven.pkg.github.com/AutomaticalEchoes/simpleandunadorned")
+//            credentials {
+//                username = System.getenv("GITHUB_ACTOR")
+//                password = System.getenv("GITHUB_TOKEN")
+//            }
+//        }
+//    }
+//}
 
 
 version = 'api'
