--- a/.github/workflows/gradle-release.yml
+++ b/.github/workflows/gradle-release.yml
@@ -9,15 +9,17 @@ on:
     branches:
       - Base
 
-name: Release
+permissions:
+  contents: write
+  pull-requests: write
+
+name: release-please
 
 jobs:
   release-please:
     runs-on: ubuntu-latest
     steps:
-      - uses: GoogleCloudPlatform/release-please-action@v3
-        id: release
+      - uses: google-github-actions/release-please-action@v3
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
           release-type: java
-          package-name: standard-version
+          package-name: release-please-action
